--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cd test && mocha test.js",
     "build": "node build.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "node watch.js"
   },
   "repository": {
     "type": "git",
