--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "chai": "^3.4.1",
     "express": "^4.13.3",
     "jsdom": "^16.3.0",
-    "mocha": "^2.3.4",
     "uglify-js": "^2.6.1",
     "watch": "^0.16.0"
   },
   "dependencies": {
     "gh-pages": "^3.1.0",
-    "jsdom-global": "^3.0.2"
+    "jsdom-global": "^3.0.2",
+    "mocha": "^8.0.1"
   }
 }
