--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Export your Twine 2 story as a JSON document",
   "main": "format.js",
   "scripts": {
-    "test": "mocha test/test.js",
+    "test": "cd test && mocha test.js",
     "build": "node build.js",
     "start": "node server.js",
     "watch": "node watch.js"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "https://github.com/lazerwalker/twison"
   },
-  "author": "Em Lazer-Walker",
+  "author": "Mike Lazer-Walker",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lazerwalker/twison/issues"
