--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Build and Deploy to GH Pages
 
 on:
@@ -14,13 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.1.0
-
-      - name: Run tests
-        run: npm run test
-        
-      - name: Build
-        run: npm run build
-
+      - run: npm install
+      - run: npm run test
+      - run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
