--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "https://github.com/lazerwalker/twison"
   },
-  "author": "Mike Lazer-Walker",
+  "author": "Em Lazer-Walker",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lazerwalker/twison/issues"
